# hugging-face-handson

./: .gitignore  README.md  auto_processing.ipynb  diffuser.ipynb  gradio-hf.ipynb  pyproject.toml  requirement.txt  transformer-hugging-face.ipynb  video-model.ipynb
.gradio/flagged/: dataset1.csv
