[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "huggingface-hub>=0.34.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
